// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Host Component should render (Host as false) 1`] = `
<div
  className="board-overlay transparent d-flex col space-around"
>
  <h6
    className="title medium"
  >
    Pending...
  </h6>
</div>
`;

exports[`Host Component should render (Host as true) 1`] = `
<div
  className="board-overlay transparent d-flex col space-around"
>
  <h6
    className="title big"
  >
    Ready ?
  </h6>
  <div
    className="bob-btn secondary"
    onClick={[Function]}
  >
    Start
  </div>
</div>
`;
